--- a/slides/index.html
+++ b/slides/index.html
@@ -172,6 +172,10 @@
 						and using little sessions like this to fine tune the content and
 						style. Feedback welcome!
 					</p>
+					<p>All the material is on: <a href="https://github.com/wildtreetech/social-impact-teaser">http://github.com/wildtreetech/social-impact-teaser</a>
+						or <a href="http://bit.ly/wtt-sit">bit.ly/wtt-sit</a>.
+					</p>
+
 				</section>
 
 				<section data-background="../imgs/tools.jpg" style="background-color: rgba(0,43,54,0.5);">
@@ -181,8 +185,10 @@
 				</section>
 
 				<section data-background="../imgs/thanks.jpg" style="background-color: rgba(0,43,54,0.5);">
-					<h2>??!</h2>
-					</p>
+					<h2>Questions ??!</h2>
+					<p>Material: <a href="http://bit.ly/wtt-sit">bit.ly/wtt-sit</a></p>
+					<p><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:tim@wildtreetech.com">tim@wildtreetech.com</a></p>
+					<p><i class="fa fa-home" aria-hidden="true"></i> <a href="http://www.wildtreetech.com">www.wildtreetech.com</a></p>
 				</section>
 
 			</div>
