--- a/slides/index.html
+++ b/slides/index.html
@@ -45,8 +45,10 @@
 			<div class="slides">
 				<section>
 					<h1>Data science for social impact</h1>
-					<h4>a teaser</h4>
-					<img style="width: 10%; height: auto; border: 0;" src="../imgs/logo.jpg" />
+					<!--<h4>a teaser</h4>-->
+					<a href="http://www.wildtreetech.com">
+						<img style="width: 10%; height: auto; border: 0;" src="../imgs/logo.jpg" />
+					</a>
 					<p>
 						<small>Created by <a href="http://www.wildtreetech.com">Tim Head</a> / <a href="http://twitter.com/betatim">@betatim</a></small>
 					</p>
@@ -72,10 +74,16 @@
 						What brings you here?
 					</p>
 					<p>
-						<small>Briefly introduce yourself.</small>
+						<small>Briefly introduce yourself.
+							<ul>
+								<li>Name</li>
+								<li>What is your interest in data?</li>
+							</ul>
+						</small>
 					</p>
 				</section>
 
+<!--
 				<section>
 					<h2>The plan</h2>
 					<ol>
@@ -88,6 +96,7 @@
 						<li>Done</li>
 					</ol>
 				</section>
+-->
 
 				<section data-background="../imgs/tools.jpg" style="background-color: rgba(0,43,54,0.5);">
 					<h2>Tools (at all levels of skill) make your life
@@ -172,7 +181,7 @@
 						and using little sessions like this to fine tune the content and
 						style. Feedback welcome!
 					</p>
-					<p>All the material is on: <a href="https://github.com/wildtreetech/social-impact-teaser">http://github.com/wildtreetech/social-impact-teaser</a>
+					<p>Material is online: <a href="https://github.com/wildtreetech/social-impact-teaser">http://github.com/wildtreetech/social-impact-teaser</a>
 						or <a href="http://bit.ly/wtt-sit">bit.ly/wtt-sit</a>.
 					</p>
 
