--- a/slides/index.html
+++ b/slides/index.html
@@ -54,13 +54,16 @@
 					</p>
 				</section>
 
+				<section data-background="../imgs/interactive-map.png">
+				</section>
+
 				<section>
-					<h2>Hello There</h2>
+					<h2>Hi, I'm Tim</h2>
 					<p>
 						Previously: scientist at <a href="//home.cern">CERN</a>.
 					</p>
 					<p>
-						<strong>Now:</strong> bigger impact by helping organisations
+						<strong>Now:</strong>helping organisations
 						with data analysis and technology. Open source!
 					</p>
 					<p>Started
@@ -83,20 +86,6 @@
 					</p>
 				</section>
 
-<!--
-				<section>
-					<h2>The plan</h2>
-					<ol>
-						<li>Slides</li>
-						<hr />
-						<li>Cleaning data</li>
-						<li>Massaging data</li>
-						<li>Visualising data</li>
-						<hr />
-						<li>Done</li>
-					</ol>
-				</section>
--->
 
 				<section data-background="../imgs/tools.jpg" style="background-color: rgba(0,43,54,0.5);">
 					<h2>Tools (at all levels of skill) make your life
@@ -176,15 +165,36 @@
 
 				<section>
 					<h2>Next steps</h2>
-					<p>Preparing a two day training course
-						<a href="http://www.wildtreetech.com/training/beyond-excel-spring-16.html">Data analysis for social impact</a>
-						and using little sessions like this to fine tune the content and
-						style. Feedback welcome!
-					</p>
 					<p>Material is online: <a href="https://github.com/wildtreetech/social-impact-teaser">http://github.com/wildtreetech/social-impact-teaser</a>
 						or <a href="http://bit.ly/wtt-sit">bit.ly/wtt-sit</a>.
 					</p>
+					<p>Use <a href="https://google.com">google</a>,
+						<a href="https://stackoverflow.com/">StackOverflow</a>,
+						and the excellent documentation of <a href="https://docs.python.org/3/">python</a>
+					and <a href="http://pandas.pydata.org/pandas-docs/version/0.18.1/">pandas</a>.</p>
+					<p>Try it on a small (hobby) project, treat it like a crossword or sudoku.</p>
+				</section>
 
+				<section>
+					<h2>A Word from our sponsor</h2>
+					<p>
+						<ol>
+							<li>
+								Preparing a two/three day training course
+								<a href="http://www.wildtreetech.com/training/beyond-excel-spring-16.html">Data analysis for social impact</a>.
+							</li>
+							<li>
+								One-on-one mentoring - have you wasted hours trying to fix a bug? Want
+								someone experienced to talk your ideas through?
+							</li>
+							<li>
+								<a href="http://www.wildtreetech.com/make48/">Make48</a> - my
+								mission to change how you see data at your organisation.
+								Build working prototypes in just 48 hours.
+							</li>
+						</ol>
+					</p>
+					<p>Interested? Talk to me.</p>
 				</section>
 
 				<section data-background="../imgs/tools.jpg" style="background-color: rgba(0,43,54,0.5);">
